--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav-link {
+  /* padding: .25rem; */
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  font-size:medium;
+  font-weight: bolder !important;
+  transition: all 0.2s;
+  box-shadow: none;
+}
+
+.nav-link:hover {
+  color: rgb(0, 0, 0);
+  box-shadow: 0px 4px 8px rgba(73, 73, 73, 0.777);
+  font-size: large;
+}
